Harden the batch pipeline, cloud integration and observability, and republish the verification evidence
Correct the generation handoff between pipeline stages, authenticate the
report-job queue boundary, tighten the record and configuration contracts,
and bring the published evidence back into agreement with the tree it
describes.

Batch and object storage
- Introduce GenerationPrefixContract as the single definition of a
  generation prefix, and route every producer and consumer through it so a
  pinned generation and a single object key can no longer be confused.
- Pass the SYSTRAN generation between the combine and posting stages as a
  job parameter, raise DataIntegrityException when an instructed generation
  is absent instead of reading nothing, and add the archive-and-reset step.
- Spool one generation per interest run, bound the transaction-report read
  rather than capping it at a fixed row count, and back the report finder
  with an index.
- Reject any record separator following a fixed-width image in the
  object-storage readers, leaving line-oriented ingestion to the seed
  migration and the fixture loader.

Online services and security
- Carry the update snapshot in the request body as explicit old and new
  detail groups, with no reliance on transport-level preconditions.
- Sign and verify report-job envelopes with an HMAC derived from the
  configured signing key, and discard an unverifiable message without
  launching a job.

Configuration and observability
- Collapse duplicated object-storage and combine-reader keys so the
  configuration parses, and withdraw keys that bound nothing.
- Stop logging raw request method, URI, content type and firewall text, park
  and restore diagnostic context in a finally block, route it through
  canonical constants, and count processed records at exactly two sites.
- Fail the vulnerability scan at CVSS 7 with a single evidence-bearing,
  expiring suppression, and tighten the container, compose and environment
  tem